--- a/config/config.yaml
+++ b/config/config.yaml
@@ -3,8 +3,8 @@ DATASET:
   TRAINING_DIR: './dataset/train'
   TESTING_DIR: './dataset/val'
 
-  TRAINING_DATASET_LEN: 10000 # Change this to 100k may get better performance
-  TESTING__DATASET_LEN: 1000
+  TRAINING_DATASET_LEN: 100000 # Change this to 100k may get better performance
+  TESTING_DATASET_LEN: 1000
 
   CAPTCHA:
     FONT_DIR: './fonts/font1.ttf'
